--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZENO AI</title>
+    <link rel="icon" type="image/jpeg" href="/icon.jpg">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.6/marked.min.js"></script>
 </head>
